[tool.poetry]
name = "shinyecharts"
version = "0.1.0"
description = ""
authors = ["Stefan Kuethe <stefan.kuethe@eoda.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
shiny = "^0.7.1"
pandas = "^2.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
